--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "bookly",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "ts-node --transpile-only prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,10 +12,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@phosphor-icons/react": "^2.1.7",
+    "@prisma/client": "^5.21.1",
+    "@tanstack/react-query": "^5.59.15",
+    "axios": "^1.7.7",
+    "js-cookie": "^3.0.5",
     "next": "14.2.15",
+    "next-auth": "^4.24.8",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
@@ -24,7 +34,9 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
