--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^5.21.1",
     "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
