--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
+    "lorem-ipsum": "^2.0.8",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
     "react": "^18",
