--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
+    "migrate:deploy": "prisma migrate deploy",
+    "seed": "prisma db seed",
     "start": "next start",
     "lint": "next lint"
   },
